; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/qdsp5/extr_audio_mp3.c_audio_flush.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/qdsp5/extr_audio_mp3.c_audio_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.audio = type { i32, i64, i64, i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.audio*)* @audio_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @audio_flush(%struct.audio* %0) #0 {
  %2 = alloca %struct.audio*, align 8
  store %struct.audio* %0, %struct.audio** %2, align 8
  %3 = load %struct.audio*, %struct.audio** %2, align 8
  %4 = getelementptr inbounds %struct.audio, %struct.audio* %3, i32 0, i32 4
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i64 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  store i64 0, i64* %7, align 8
  %8 = load %struct.audio*, %struct.audio** %2, align 8
  %9 = getelementptr inbounds %struct.audio, %struct.audio* %8, i32 0, i32 4
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i64 1
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  %13 = load %struct.audio*, %struct.audio** %2, align 8
  %14 = getelementptr inbounds %struct.audio, %struct.audio* %13, i32 0, i32 3
  store i64 0, i64* %14, align 8
  %15 = load %struct.audio*, %struct.audio** %2, align 8
  %16 = getelementptr inbounds %struct.audio, %struct.audio* %15, i32 0, i32 2
  store i64 0, i64* %16, align 8
  %17 = load %struct.audio*, %struct.audio** %2, align 8
  %18 = getelementptr inbounds %struct.audio, %struct.audio* %17, i32 0, i32 1
  store i64 0, i64* %18, align 8
  %19 = load %struct.audio*, %struct.audio** %2, align 8
  %20 = getelementptr inbounds %struct.audio, %struct.audio* %19, i32 0, i32 0
  %21 = call i32 @atomic_set(i32* %20, i32 0)
  ret void
}

declare dso_local i32 @atomic_set(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
